ref/Modules/AzureRM.Resources/v3.3.0/Get-AzureRmProviderOperation.md
---
external help file: Microsoft.Azure.Commands.Resources.dll-Help.xml
ms.assetid: 6424B740-DBFB-490C-AEAA-EDD60952B435
online version: 
schema: 2.0.0
updated_at: 2/23/2017 2:56 AM
ms.date: 2/23/2017
content_git_url: https://github.com/Azure/azure-docs-powershell/blob/master/azureps-cmdlets-docs/ResourceManager/AzureRM.Resources/v3.3.0/Get-AzureRmProviderOperation.md
original_content_git_url: https://github.com/Azure/azure-docs-powershell/blob/master/azureps-cmdlets-docs/ResourceManager/AzureRM.Resources/v3.3.0/Get-AzureRmProviderOperation.md
gitcommit: https://github.com/Azure/azure-docs-powershell/blob/d070c11b7655b031efb443fc675d2cfb22229331/azureps-cmdlets-docs/ResourceManager/AzureRM.Resources/v3.3.0/Get-AzureRmProviderOperation.md
ms.topic: reference
ms.prod: powershell
ms.technology: Azure PowerShell
author: erickson-doug
ms.author: PowerShellHelpPub
keywords: powershell, cmdlet
manager: erickson-doug
open_to_public_contributors: False
ms.service: azure-powershell
---

# Get-AzureRmProviderOperation

## SYNOPSIS
Gets the operations for an Azure resource provider that are securable using Azure RBAC.

## SYNTAX

```
Get-AzureRmProviderOperation [-OperationSearchString] <String> [-InformationAction <ActionPreference>]
 [-InformationVariable <String>]
```

## DESCRIPTION
The Get-AzureRmProviderOperation gets the operations exposed by Azure resource providers.
Operations can be composed to create custom roles in Azure RBAC.
The command takes as input an operation search string (with possible wildcard(*) character(s)) which determines the operations details to display.

Use **Get-AzureRmProviderOperation** to get all operations for all Azure resource providers.

Use **Get-AzureRmProviderOperation** Microsoft.Compute to get all operations of Microsoft.Compute resource provider.

## EXAMPLES

### Example 1: Get all actions for all providers

```
PS C:\> Get-AzureRmProviderOperation *
```

This command get all action for all providers.

### Example 2: Get actions for a particular resource provider
```
PS C:\> Get-AzureRmProviderOperation Microsoft.Insights/*
```

This command get actions for the specified resource provider.

### Example 3: Get all actions that can be performed on virtual machines

```
PS C:\> Get-AzureRmProviderOperation */virtualMachines/*
```

This command gets all actions that can be performed on virtual machines.

## PARAMETERS

### -OperationSearchString
Specifies the operation search string (with possible wildcard (*) characters).

```yaml
Type: String
Parameter Sets: (All)
Aliases: 

Required: True
Position: 0
Default value: None
Accept pipeline input: True (ByValue)
Accept wildcard characters: False
```

### -InformationAction
Specifies how this cmdlet responds to an information event.

The acceptable values for this parameter are:

- Continue
- Ignore
- Inquire
- SilentlyContinue
- Stop
- Suspend

```yaml
Type: ActionPreference
Parameter Sets: (All)
Aliases: infa

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -InformationVariable
Specifies an information variable.

```yaml
Type: String
Parameter Sets: (All)
Aliases: iv

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

## INPUTS

## OUTPUTS

## NOTES
Keywords: azure, azurerm, arm, resource, management, manager, resource, group, template, deployment

## RELATED LINKS
